--- a/src/styles/components/_list.scss
+++ b/src/styles/components/_list.scss
@@ -1,8 +1,7 @@
 .list {
-    display: flex;
+    display: inline-flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     margin-top: $s-size;
 
     &-offset {
