--- a/src/styles/components/_post.scss
+++ b/src/styles/components/_post.scss
@@ -4,6 +4,7 @@
     box-shadow: 0 2px 4px 0 hsla(0, 0, 0, 0.2);
     margin-bottom: $s-size;
     transition: opacity 300ms ease-in;
+    height: 200px;
 }
 
 .post-container {
@@ -86,6 +87,11 @@
     grid-column: 4 / span 2;
     grid-row: 2;
     place-self: center;
+}
+
+.post__time-block {
+    display: flex;
+    align-items: center;
 }
 
 .post__reddit {
